# omelette

./: LICENSE  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test-suite.yml
omelette/: app.py
scripts/: README.md  check  clean
tests/: test_version.py
