[tool.poetry]
name = "omelette"
version = "0.0.1"
description = "A LiveView implementation based on Starlette ASGI framework"
authors = ["Fran Espino <francisco.espino@cofi.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
isort = "^5.8.0"
black = "^21.5b1"
flake8 = "^3.9.2"
autoflake = "^1.4"
mypy = "^0.812"
flake8-bugbear = "^21.4.3"
flake8-pie = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
